--- a/styles/css/identity.css
+++ b/styles/css/identity.css
@@ -253,26 +253,27 @@ TODO: Types Table
 ◈──────────────────────────────────────────────────────◈
 TODO: Types Table
 ◈──────────────────────────────────────────────────────◈ */
-@media (pointer: fine) and (min-width: 501px) and (min-height: 501px) {
-  .types_table_msg {
-    display: none !important;
-  }
+/* 
+.types_table_msg {
+    @media (pointer: fine) and (min-width: $screen_small_widthLimit) and (min-height: $screen_small_widthLimit) {
+        display: none !important;
+    }
 }
-
+*/
 .types_table_box {
-  display: none;
+  /* 
+    display: none;
+
+    @media (pointer: fine) and (min-width: $screen_small_widthLimit) and (min-height: $screen_small_widthLimit) {
+        display: block;
+    }
+    */
   max-height: calc(100vh - 48px - (2 * 16rem));
   margin: auto;
   border: 2px solid DeepSkyBlue;
   border-radius: 0;
   border-top-left-radius: 20px;
   overflow: auto;
-}
-
-@media (pointer: fine) and (min-width: 501px) and (min-height: 501px) {
-  .types_table_box {
-    display: block;
-  }
 }
 
 @media (min-width: 501px) {
