--- a/styles/scss/identity.scss
+++ b/styles/scss/identity.scss
@@ -604,8 +604,9 @@ TODO: About Us Page
     .profile_img {
         width: 100%;
         max-width: 370px;
-        max-height: 370px;
-        border-radius: 1000px;
+        // max-height: 370px;
+        // border-radius: 1000px;
+        border-radius: 60px;
     }
 
     .profile_txt {
