--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -4658,6 +4658,7 @@ figure.outdoor img {
 }
 
 .slider img, .slider picture {
+  width: initial;
   max-width: 94%;
   max-height: calc(100vh - 4px);
 }
