--- a/hi-techCore/styles/css/defaults.css
+++ b/hi-techCore/styles/css/defaults.css
@@ -201,19 +201,6 @@ TODO: Texts
     font-family: 'Times New Roman'; 
     font-size: 19px;
 }
-
-.Cyber-BoldBook {
-    font-family: 'Cyber-BoldBook';
-    font-size: 15rem; // Era 14rem!!! (Mudar o tamanho dos caracteres que já criei)
-    line-height: 1.8; 
-    text-shadow: 0.2px 0px 0px; 
-} 
-
-.Myfont-Regular {
-    font-family: 'Myfont-Regular';
-    font-size: 19px;
-    // text-transform: lowercase;
-}
  */
 .courier {
   font-family: 'Courier';
@@ -4619,24 +4606,110 @@ figure.outdoor img {
 
 /*  TODO:    1 ▶ Galleries
 ◈──────────────────────────────────────────────────────◈ */
+.gallery {
+  position: relative;
+  display: block;
+  /*   
+    button {
+        border: 0;
+        background: rgba(150,150,150,0.6);
+        text-shadow: 1px 1px 1px white;
+        border: 1px solid #999;
+        position: absolute;
+        cursor: pointer;
+        top: 2px;
+        left: 2px; 
+    } */
+}
+
+.gallery .painel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.gallery .painel .order {
+  position: absolute;
+  bottom: 20px;
+  font-weight: bold;
+  padding: 0 6px;
+  border: 2px solid black;
+  border-radius: 1000px;
+  filter: drop-shadow(0px 0px 6px white);
+  cursor: pointer;
+  opacity: 0;
+}
+
+.gallery .painel .btn_back, .gallery .painel .btn_next {
+  width: 12%;
+  height: 100%;
+  margin: 0;
+  background: 0;
+}
+
+.gallery .painel .btn_back img, .gallery .painel .btn_next img {
+  width: 26px;
+  opacity: 0.4;
+  filter: drop-shadow(0px 0px 7px white);
+}
+
+.gallery .painel .btn_fullScreen {
+  width: calc(100% - 2 * 12%);
+  height: 100%;
+  margin: 0;
+  background: 0;
+  /* 
+            img {
+                width: 62%;
+                padding: 6px 8px;
+                border: 2px solid black;
+                border-radius: 1000px;
+                // background-color: hsla(0, 0%, 100%, 0.20);
+                filter: drop-shadow(0px 0px 6px white);
+
+                @media (min-width: $screen_small_widthLimit) { 
+                    width: 46%;
+                    border: 4px solid black; 
+                }
+            } */
+}
+
+.gallery .painel .btn_back:focus, .gallery .painel .btn_fullScreen:focus, .gallery .painel .btn_next:focus {
+  outline: 0;
+}
+
+.gallery > img {
+  max-width: 100%;
+}
+
+.gallery > img:not(:nth-of-type(1)) {
+  display: none;
+}
+
+/* 
 .gallery img {
-  width: 50%;
+    width: 50%;
 }
 
 .gallery a {
-  font-size: 0;
+    font-size: 0;
 }
 
-@media (min-width: 501px) {
-  .gallery {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  .gallery img {
-    width: 25%;
-  }
-}
+@media (min-width: $screen_small_widthLimit) { 
 
+    .gallery {
+        margin-left: $margin_horizontal;
+        margin-right: $margin_horizontal;
+    }
+
+    .gallery img { 
+        width: 25%; 
+    } 
+}
+ */
 /*  TODO:    1 ▶ Sliders
 ◈──────────────────────────────────────────────────────◈ */
 .slider {
@@ -4658,7 +4731,6 @@ figure.outdoor img {
 }
 
 .slider img, .slider picture {
-  width: initial;
   max-width: 94%;
   max-height: calc(100vh - 4px);
 }
