--- a/hi-techCore/styles/scss/defaults.scss
+++ b/hi-techCore/styles/scss/defaults.scss
@@ -688,19 +688,6 @@ TODO: Texts
     font-family: 'Times New Roman'; 
     font-size: 19px;
 }
-
-.Cyber-BoldBook {
-    font-family: 'Cyber-BoldBook';
-    font-size: 15rem; // Era 14rem!!! (Mudar o tamanho dos caracteres que já criei)
-    line-height: 1.8; 
-    text-shadow: 0.2px 0px 0px; 
-} 
-
-.Myfont-Regular {
-    font-family: 'Myfont-Regular';
-    font-size: 19px;
-    // text-transform: lowercase;
-}
  */
 .courier {
     font-family: 'Courier';
@@ -5181,6 +5168,96 @@ figure.outdoor img {
 /*  TODO:    1 ▶ Galleries
 ◈──────────────────────────────────────────────────────◈ */
 
+.gallery {
+    position: relative;
+    display: block;
+
+    .painel {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+
+        .order {
+            position: absolute;
+            bottom: 20px;
+            font-weight: bold;
+            padding: 0 6px;
+            border: 2px solid black;
+            border-radius: 1000px;
+            // background-color: hsla(0, 0%, 100%, 0.13);
+            filter: drop-shadow(0px 0px 6px white);
+            cursor: pointer;
+            opacity: 0;
+        }
+
+        $btns_laterais_width: 12%;
+        $btn_middle_width: calc(100% - 2 * #{$btns_laterais_width});
+
+        .btn_back, .btn_next {
+            width: $btns_laterais_width;
+            height: 100%;
+            margin: 0;
+            background: 0;
+
+            img {
+                width: 26px; // Min: 8%;
+                opacity: 0.4;
+                filter: drop-shadow(0px 0px 7px white);
+            }
+        }
+
+        .btn_fullScreen {
+            width: $btn_middle_width; // 76%;
+            height: 100%;
+            margin: 0;
+            background: 0;
+
+            /* 
+            img {
+                width: 62%;
+                padding: 6px 8px;
+                border: 2px solid black;
+                border-radius: 1000px;
+                // background-color: hsla(0, 0%, 100%, 0.20);
+                filter: drop-shadow(0px 0px 6px white);
+
+                @media (min-width: $screen_small_widthLimit) { 
+                    width: 46%;
+                    border: 4px solid black; 
+                }
+            } */
+        }
+
+        .btn_back:focus, .btn_fullScreen:focus, .btn_next:focus {
+            outline: 0;
+        }
+    }
+
+    > img {
+        max-width: 100%;
+    }
+
+    > img:not(:nth-of-type(1)) {
+        display: none;
+    }
+    
+    /*   
+    button {
+        border: 0;
+        background: rgba(150,150,150,0.6);
+        text-shadow: 1px 1px 1px white;
+        border: 1px solid #999;
+        position: absolute;
+        cursor: pointer;
+        top: 2px;
+        left: 2px; 
+    } */
+}
+
+/* 
 .gallery img {
     width: 50%;
 }
@@ -5200,7 +5277,7 @@ figure.outdoor img {
         width: 25%; 
     } 
 }
-
+ */
 
 /*  TODO:    1 ▶ Sliders
 ◈──────────────────────────────────────────────────────◈ */
@@ -5227,7 +5304,6 @@ figure.outdoor img {
  
 .slider img, .slider picture {
 
-    width: initial;
     max-width: 94%;   
     max-height: calc(100vh - 4px);
 }
